--- a/templates/sitebox.html
+++ b/templates/sitebox.html
@@ -1,7 +1,7 @@
 <div class="box" id="feed-{{ feed_id }}">
 <center><a target="_blank" href="{{ link }}"><img loading="lazy" src="{{ logo }}" alt="{{ alt_tag | safe }}" style="max-height:100px;"/></a></center>
   <center>
-    <small>Last updated (your time): <span class="last-updated-time" data-utc-time="{{ last_fetch }}">Loading...</span></small>
+    <small>Last updated: <span class="last-updated-time" data-utc-time="{{ last_fetch }}"></span></small>
     <!-- Time is automatically converted from server timezone to your browser's local timezone -->
   </center>
   <div class="pagination-controls" data-feed-id="feed-{{ feed_id }}">
