--- a/templates/page.html
+++ b/templates/page.html
@@ -34,6 +34,7 @@
         </div>
         <span id="weather-collapsed-label" class="weather-collapsed-label">🌤️ Weather</span>
         <button id="weather-toggle-btn" class="weather-toggle-btn" title="Toggle Weather">&#9660;</button>
+        <button id="weather-unit-toggle" class="weather-unit-toggle" title="Switch to Celsius">°F</button>
       </div>
     </div>
 
